Add FAQ section and floating CTA button to enhance user navigation

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
             </a>
           </li>
           <li>
+            <a href="#faq">
+              <span class="nav-link-title">FAQ</span>
+              <span class="nav-link-sub">Dúvidas rápidas</span>
+            </a>
+          </li>
+          <li>
             <a href="#contact">
               <span class="nav-link-title">Contato</span>
               <span class="nav-link-sub">Desk corporativo</span>
@@ -68,6 +74,7 @@
           <li><a href="#benefits">Benefícios</a></li>
           <li><a href="#features">Recursos</a></li>
           <li><a href="#alliance">Parceria</a></li>
+          <li><a href="#faq">FAQ</a></li>
           <li><a href="#contact">Contato</a></li>
           <li><a href="#about">Sobre</a></li>
         </ul>
@@ -212,6 +219,52 @@
           <p class="card-detail">Isola navegadores sensíveis e aplica teclado virtual anti-keylogger.</p>
           <a href="#contact" class="card-link">Ver modo seguro</a>
         </article>
+      </div>
+    </section>
+
+    <section class="faq" id="faq">
+      <div class="section-header">
+        <p class="eyebrow">Dúvidas frequentes</p>
+        <h2>Entenda como ativamos sua proteção</h2>
+        <p>Selecionamos as perguntas que mais surgem durante a contratação e onboarding corporativo.</p>
+      </div>
+      <div class="faq-grid">
+        <details class="faq-item" open>
+          <summary>
+            <span>Quanto tempo leva para implantar?</span>
+            <span class="faq-icon" aria-hidden="true">+</span>
+          </summary>
+          <p>
+            Após o kickoff, o cronograma padrão de rollout corporativo ocorre entre 7 e 15 dias, com ondas rápidas para ambientes críticos e suporte dedicado do Grupo Imagetech.
+          </p>
+        </details>
+        <details class="faq-item">
+          <summary>
+            <span>Vocês ajudam na governança?</span>
+            <span class="faq-icon" aria-hidden="true">+</span>
+          </summary>
+          <p>
+            Sim. Criamos matrizes de responsabilidade, relatórios executivos e integração com as áreas de compliance e auditoria para manter visibilidade contínua.
+          </p>
+        </details>
+        <details class="faq-item">
+          <summary>
+            <span>Há suporte em português?</span>
+            <span class="faq-icon" aria-hidden="true">+</span>
+          </summary>
+          <p>
+            Todo o atendimento é feito em português, com escalonamento direto para laboratórios globais da Kaspersky quando necessário.
+          </p>
+        </details>
+        <details class="faq-item">
+          <summary>
+            <span>Como funciona a prova de conceito?</span>
+            <span class="faq-icon" aria-hidden="true">+</span>
+          </summary>
+          <p>
+            Desenhamos um ambiente controlado, provisionamos licenças temporárias e entregamos métricas claras para validar performance antes da aquisição final.
+          </p>
+        </details>
       </div>
     </section>
 
@@ -517,6 +570,10 @@
       </div>
       <p class="footer-note">© 2025 Kaspersky Lab. Todos os direitos reservados.</p>
     </footer>
+
+    <a href="#contact" class="floating-cta" aria-label="Falar com especialistas">
+      <span>Falar com especialistas</span>
+    </a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-a5d3DmXna43EIBgzHuLlHotE5T7V6czS4QhIwTZPIYOvToIJOfzmiEJeZVrDCTnhgypKekJy5o+1OtSWT8gJ3A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
