feat: Initial commit of Kaspersky Imagetech Landing theme with complete structure, including header, footer, front page, and AJAX lead form functionality. Added GSAP animations and responsive mobile menu. Implemented block patterns for Gutenberg editor.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
           <span class="brand-divider" aria-hidden="true"></span>
           <div class="partner-mark">
             <img src="LOGO_escritabranca.png" alt="Grupo Imagetech" />
-            <span>Grupo Imagetech</span>
           </div>
         </div>
         <ul class="nav-links">
@@ -51,7 +50,6 @@
             </a>
           </li>
         </ul>
-        <a href="#contact" class="btn ghost">Assine</a>
         <button class="nav-toggle" aria-label="Abrir menu" aria-expanded="false">
           <span></span>
           <span></span>
@@ -64,7 +62,6 @@
           <li><a href="#testimonials">Clientes</a></li>
           <li><a href="#contact">Contato</a></li>
         </ul>
-        <a href="#contact" class="btn primary">Comprar Agora</a>
       </div>
       <div class="hero-content">
         <div class="hero-text">
@@ -75,21 +72,6 @@
           </p>
           <div class="hero-actions">
             <a href="#contact" class="btn primary">Solicitar proposta</a>
-            <button class="btn secondary" id="watch-demo">Ver Demonstração</button>
-          </div>
-          <div class="ally-ribbon">
-            <div class="ally-ribbon-logo">
-              <img src="LOGO_escritabranca.png" alt="Grupo Imagetech" />
-            </div>
-            <div class="ally-ribbon-content">
-              <p>Parceria oficial Kaspersky + Grupo Imagetech</p>
-              <span>Operação co-branded com squads dedicados, homologação e governança corporativa.</span>
-              <ul class="ally-pill-list">
-                <li>Integração certificada</li>
-                <li>Suporte especializado 24/7</li>
-                <li>Atuação conjunta em campo</li>
-              </ul>
-            </div>
           </div>
           <div class="hero-stats">
             <div>
@@ -188,27 +170,19 @@
         <h2>Menos ruído, mais segurança</h2>
         <p>Companhias que simplificaram a proteção mantendo o padrão Kaspersky.</p>
       </div>
-      <div class="testimonial-grid">
-        <article class="testimonial" data-delay="0">
-          <p>"Simplificamos o stack de segurança e ganhamos transparência imediata sobre incidentes críticos."</p>
-          <div class="author">
-            <div>
-              <strong>Luciana Ribeiro</strong>
-              <span>CTO, NovaWave</span>
-            </div>
-            <span class="rating">4.9 ★</span>
-          </div>
-        </article>
-        <article class="testimonial" data-delay="0.1">
-          <p>"A atuação conjunta com a Imagetech acelerou o rollout e manteve todos informados com relatórios curtos."</p>
-          <div class="author">
-            <div>
-              <strong>Daniel Costa</strong>
-              <span>Head de TI, ArboPay</span>
-            </div>
-            <span class="rating">4.8 ★</span>
-          </div>
-        </article>
+      <div class="logo-carousel" aria-label="Clientes que confiam">
+        <div class="logo-track">
+          <div class="logo-item">NovaWave</div>
+          <div class="logo-item">ArboPay</div>
+          <div class="logo-item">Atlas Connect</div>
+          <div class="logo-item">Digitronix</div>
+          <div class="logo-item">CorePulse</div>
+          <div class="logo-item">NovaWave</div>
+          <div class="logo-item">ArboPay</div>
+          <div class="logo-item">Atlas Connect</div>
+          <div class="logo-item">Digitronix</div>
+          <div class="logo-item">CorePulse</div>
+        </div>
       </div>
     </section>
 
