Implement code structure updates and remove redundant code blocks

--- a/index.html
+++ b/index.html
@@ -172,16 +172,14 @@
       </div>
       <div class="logo-carousel" aria-label="Clientes que confiam">
         <div class="logo-track">
-          <div class="logo-item">NovaWave</div>
-          <div class="logo-item">ArboPay</div>
-          <div class="logo-item">Atlas Connect</div>
-          <div class="logo-item">Digitronix</div>
-          <div class="logo-item">CorePulse</div>
-          <div class="logo-item">NovaWave</div>
-          <div class="logo-item">ArboPay</div>
-          <div class="logo-item">Atlas Connect</div>
-          <div class="logo-item">Digitronix</div>
-          <div class="logo-item">CorePulse</div>
+          <div class="logo-item">Drebor Borrachas</div>
+          <div class="logo-item">Mix Nutri</div>
+          <div class="logo-item">Multicoisas</div>
+          <div class="logo-item">Conselho Federal de Administração (CFA)</div>
+          <div class="logo-item">Drebor Borrachas</div>
+          <div class="logo-item">Mix Nutri</div>
+          <div class="logo-item">Multicoisas</div>
+          <div class="logo-item">Conselho Federal de Administração (CFA)</div>
         </div>
       </div>
     </section>
