feat: Enhance logo carousel and section styles for improved visual presentation

--- a/index.html
+++ b/index.html
@@ -171,15 +171,89 @@
         <p>Companhias que simplificaram a proteção mantendo o padrão Kaspersky.</p>
       </div>
       <div class="logo-carousel" aria-label="Clientes que confiam">
-        <div class="logo-track">
-          <div class="logo-item">Drebor Borrachas</div>
-          <div class="logo-item">Mix Nutri</div>
-          <div class="logo-item">Multicoisas</div>
-          <div class="logo-item">Conselho Federal de Administração (CFA)</div>
-          <div class="logo-item">Drebor Borrachas</div>
-          <div class="logo-item">Mix Nutri</div>
-          <div class="logo-item">Multicoisas</div>
-          <div class="logo-item">Conselho Federal de Administração (CFA)</div>
+        <div class="logo-track" data-speed="26">
+          <article class="logo-item" data-accent="sky">
+            <span class="logo-chip">Indústria</span>
+            <strong>Drebor Borrachas</strong>
+            <span class="logo-meta">+18 plantas protegidas</span>
+          </article>
+          <article class="logo-item" data-accent="lime">
+            <span class="logo-chip">Alimentos</span>
+            <strong>Mix Nutri</strong>
+            <span class="logo-meta">SOC dedicado Imagetech</span>
+          </article>
+          <article class="logo-item" data-accent="royal">
+            <span class="logo-chip">Varejo</span>
+            <strong>Multicoisas</strong>
+            <span class="logo-meta">Cobertura multi-lojas</span>
+          </article>
+          <article class="logo-item" data-accent="gold">
+            <span class="logo-chip">Conselho Federal</span>
+            <strong>CFA</strong>
+            <span class="logo-meta">Governança + LGPD</span>
+          </article>
+          <article class="logo-item" data-accent="sky">
+            <span class="logo-chip">Indústria</span>
+            <strong>Drebor Borrachas</strong>
+            <span class="logo-meta">+18 plantas protegidas</span>
+          </article>
+          <article class="logo-item" data-accent="lime">
+            <span class="logo-chip">Alimentos</span>
+            <strong>Mix Nutri</strong>
+            <span class="logo-meta">SOC dedicado Imagetech</span>
+          </article>
+          <article class="logo-item" data-accent="royal">
+            <span class="logo-chip">Varejo</span>
+            <strong>Multicoisas</strong>
+            <span class="logo-meta">Cobertura multi-lojas</span>
+          </article>
+          <article class="logo-item" data-accent="gold">
+            <span class="logo-chip">Conselho Federal</span>
+            <strong>CFA</strong>
+            <span class="logo-meta">Governança + LGPD</span>
+          </article>
+        </div>
+        <div class="logo-track reverse" data-speed="32">
+          <article class="logo-item" data-accent="sky">
+            <span class="logo-chip">Indústria</span>
+            <strong>Drebor Borrachas</strong>
+            <span class="logo-meta">+18 plantas protegidas</span>
+          </article>
+          <article class="logo-item" data-accent="lime">
+            <span class="logo-chip">Alimentos</span>
+            <strong>Mix Nutri</strong>
+            <span class="logo-meta">SOC dedicado Imagetech</span>
+          </article>
+          <article class="logo-item" data-accent="royal">
+            <span class="logo-chip">Varejo</span>
+            <strong>Multicoisas</strong>
+            <span class="logo-meta">Cobertura multi-lojas</span>
+          </article>
+          <article class="logo-item" data-accent="gold">
+            <span class="logo-chip">Conselho Federal</span>
+            <strong>CFA</strong>
+            <span class="logo-meta">Governança + LGPD</span>
+          </article>
+          <article class="logo-item" data-accent="sky">
+            <span class="logo-chip">Indústria</span>
+            <strong>Drebor Borrachas</strong>
+            <span class="logo-meta">+18 plantas protegidas</span>
+          </article>
+          <article class="logo-item" data-accent="lime">
+            <span class="logo-chip">Alimentos</span>
+            <strong>Mix Nutri</strong>
+            <span class="logo-meta">SOC dedicado Imagetech</span>
+          </article>
+          <article class="logo-item" data-accent="royal">
+            <span class="logo-chip">Varejo</span>
+            <strong>Multicoisas</strong>
+            <span class="logo-meta">Cobertura multi-lojas</span>
+          </article>
+          <article class="logo-item" data-accent="gold">
+            <span class="logo-chip">Conselho Federal</span>
+            <strong>CFA</strong>
+            <span class="logo-meta">Governança + LGPD</span>
+          </article>
         </div>
       </div>
     </section>
