feat: add responsive navigation and floating CTA functionality
- Implemented mobile navigation toggle with accessibility features.
- Added event listeners for closing the mobile menu when clicking outside.
- Introduced a floating call-to-action button that appears on scroll.
- Created a lead form with asynchronous submission and status messaging.
- Enhanced solution cards with tilt effect on mouse movement.
- Integrated GSAP animations for various elements on the page.
- Established a comprehensive CSS structure with custom properties for theming.
- Designed responsive styles for various screen sizes to improve user experience.

--- a/sites/kaspersky/index.html
+++ b/sites/kaspersky/index.html
@@ -21,7 +21,7 @@
           <div class="logo">Kaspersky</div>
           <span class="brand-divider" aria-hidden="true"></span>
           <div class="partner-mark">
-            <img src="LOGO_escritabranca.png" alt="Grupo Imagetech" />
+            <img src="/assets/images/LOGO_escritabranca.png" alt="Grupo Imagetech" />
           </div>
         </div>
         <ul class="nav-links">
@@ -105,13 +105,16 @@
     <section class="solutions" id="solutions">
       <div class="section-header">
         <p class="eyebrow">Essencial e direto</p>
-        <h2>Três pilares para proteger sua operação</h2>
-        <p>Foco no que mais importa: visibilidade, resposta rápida e suporte próximo.</p>
+        <h2>Conheça as três vantagens da nossa contratação</h2>
+        <p>Proteção avançada Kaspersky com implantação, suporte e time especializado inclusos em um único pacote.</p>
       </div>
       <div class="solution-grid">
         <article class="solution-card" data-delay="0">
           <div class="icon-shell">
-            <span class="icon">🛡</span>
+            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M12 2.25c-2.52 1.47-5.04 2.09-7.59 2.4l-.91.12a.75.75 0 0 0-.65.74v6.35c0 5.07 3.03 9.74 7.66 11.59l.25.1.24-.1c4.63-1.85 7.66-6.52 7.66-11.59V5.51a.75.75 0 0 0-.65-.74l-.91-.12c-2.55-.31-5.07-.93-7.6-2.39Z" />
+              <path d="m9 12.75 2.25 2.25L15 11.25" />
+            </svg>
           </div>
           <h3>Proteção em tempo real</h3>
           <p>
@@ -120,20 +123,33 @@
         </article>
         <article class="solution-card" data-delay="0.08">
           <div class="icon-shell">
-            <span class="icon">🌐</span>
+            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+              <rect x="3" y="6" width="18" height="11" rx="1.5" />
+              <path d="M8 19h8" />
+              <path d="M10 19v1.5" />
+              <path d="M14 19v1.5" />
+            </svg>
           </div>
-          <h3>Controle centralizado</h3>
+          <h3>Implantação, suporte e monitoramento</h3>
           <p>
-            Dashboards objetivos para governar políticas, alertas e relatórios sem ruído ou camadas desnecessárias.
+            Squad Imagetech cuida da ativação, monitora alertas e mantém o ambiente otimizado sem custos extras.
           </p>
         </article>
         <article class="solution-card" data-delay="0.16">
           <div class="icon-shell">
-            <span class="icon">🤝</span>
+            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M15.25 9.25a3.25 3.25 0 1 1-6.5 0 3.25 3.25 0 0 1 6.5 0Z" />
+              <path d="M7 20.25h10" />
+              <path d="M12 13.5c-3.3 0-6 2.7-6 6v.75" />
+              <path d="M18 20.25v-.75c0-3.3-2.7-6-6-6" />
+              <path d="M12 6.5V4.25" />
+              <path d="M9 6.75 7.5 5.25" />
+              <path d="M15 6.75 16.5 5.25" />
+            </svg>
           </div>
-          <h3>Operação assistida</h3>
+          <h3>Equipe técnica especializada</h3>
           <p>
-            Times dedicados da Imagetech acompanham cada etapa, do kickoff ao suporte contínuo, sempre em português.
+            Analistas certificados ficam dedicados ao seu ambiente para responder incidentes e orientar o board.
           </p>
         </article>
       </div>
@@ -171,89 +187,107 @@
         <p>Companhias que simplificaram a proteção mantendo o padrão Kaspersky.</p>
       </div>
       <div class="logo-carousel" aria-label="Clientes que confiam">
-        <div class="logo-track" data-speed="26">
-          <article class="logo-item" data-accent="sky">
-            <span class="logo-chip">Indústria</span>
-            <strong>Drebor Borrachas</strong>
-            <span class="logo-meta">+18 plantas protegidas</span>
-          </article>
-          <article class="logo-item" data-accent="lime">
-            <span class="logo-chip">Alimentos</span>
-            <strong>Mix Nutri</strong>
-            <span class="logo-meta">SOC dedicado Imagetech</span>
-          </article>
-          <article class="logo-item" data-accent="royal">
-            <span class="logo-chip">Varejo</span>
-            <strong>Multicoisas</strong>
-            <span class="logo-meta">Cobertura multi-lojas</span>
-          </article>
-          <article class="logo-item" data-accent="gold">
-            <span class="logo-chip">Conselho Federal</span>
-            <strong>CFA</strong>
-            <span class="logo-meta">Governança + LGPD</span>
-          </article>
-          <article class="logo-item" data-accent="sky">
-            <span class="logo-chip">Indústria</span>
-            <strong>Drebor Borrachas</strong>
-            <span class="logo-meta">+18 plantas protegidas</span>
-          </article>
-          <article class="logo-item" data-accent="lime">
-            <span class="logo-chip">Alimentos</span>
-            <strong>Mix Nutri</strong>
-            <span class="logo-meta">SOC dedicado Imagetech</span>
-          </article>
-          <article class="logo-item" data-accent="royal">
-            <span class="logo-chip">Varejo</span>
-            <strong>Multicoisas</strong>
-            <span class="logo-meta">Cobertura multi-lojas</span>
-          </article>
-          <article class="logo-item" data-accent="gold">
-            <span class="logo-chip">Conselho Federal</span>
-            <strong>CFA</strong>
-            <span class="logo-meta">Governança + LGPD</span>
-          </article>
-        </div>
-        <div class="logo-track reverse" data-speed="32">
-          <article class="logo-item" data-accent="sky">
-            <span class="logo-chip">Indústria</span>
-            <strong>Drebor Borrachas</strong>
-            <span class="logo-meta">+18 plantas protegidas</span>
-          </article>
-          <article class="logo-item" data-accent="lime">
-            <span class="logo-chip">Alimentos</span>
-            <strong>Mix Nutri</strong>
-            <span class="logo-meta">SOC dedicado Imagetech</span>
-          </article>
-          <article class="logo-item" data-accent="royal">
-            <span class="logo-chip">Varejo</span>
-            <strong>Multicoisas</strong>
-            <span class="logo-meta">Cobertura multi-lojas</span>
-          </article>
-          <article class="logo-item" data-accent="gold">
-            <span class="logo-chip">Conselho Federal</span>
-            <strong>CFA</strong>
-            <span class="logo-meta">Governança + LGPD</span>
-          </article>
-          <article class="logo-item" data-accent="sky">
-            <span class="logo-chip">Indústria</span>
-            <strong>Drebor Borrachas</strong>
-            <span class="logo-meta">+18 plantas protegidas</span>
-          </article>
-          <article class="logo-item" data-accent="lime">
-            <span class="logo-chip">Alimentos</span>
-            <strong>Mix Nutri</strong>
-            <span class="logo-meta">SOC dedicado Imagetech</span>
-          </article>
-          <article class="logo-item" data-accent="royal">
-            <span class="logo-chip">Varejo</span>
-            <strong>Multicoisas</strong>
-            <span class="logo-meta">Cobertura multi-lojas</span>
-          </article>
-          <article class="logo-item" data-accent="gold">
-            <span class="logo-chip">Conselho Federal</span>
-            <strong>CFA</strong>
-            <span class="logo-meta">Governança + LGPD</span>
-          </article>
+        <div class="logo-rows">
+          <div class="logo-row">
+            <article class="logo-item" data-accent="sky">
+              <img class="logo-mark" src="/assets/logos/drebor.png" alt="Logo Drebor Borrachas" loading="lazy" />
+              <span class="logo-chip">Indústria</span>
+              <strong>Drebor Borrachas</strong>
+              <span class="logo-meta">+18 plantas protegidas</span>
+            </article>
+            <article class="logo-item" data-accent="lime">
+              <img class="logo-mark" src="/assets/logos/mixnutri.png" alt="Logo Mix Nutri" loading="lazy" />
+              <span class="logo-chip">Alimentos</span>
+              <strong>Mix Nutri</strong>
+              <span class="logo-meta">SOC dedicado Imagetech</span>
+            </article>
+            <article class="logo-item" data-accent="royal">
+              <img class="logo-mark" src="/assets/logos/multicoisas.png" alt="Logo Multicoisas" loading="lazy" />
+              <span class="logo-chip">Varejo</span>
+              <strong>Multicoisas</strong>
+              <span class="logo-meta">Cobertura multi-lojas</span>
+            </article>
+            <article class="logo-item" data-accent="gold">
+              <img class="logo-mark" src="/assets/logos/cfa.png" alt="Logo Conselho Federal de Administração" loading="lazy" />
+              <span class="logo-chip">Conselho Federal</span>
+              <strong>CFA</strong>
+              <span class="logo-meta">Governança + LGPD</span>
+            </article>
+            <article class="logo-item" data-accent="sky" aria-hidden="true">
+              <img class="logo-mark" src="/assets/logos/drebor.png" alt="Logo Drebor Borrachas" loading="lazy" />
+              <span class="logo-chip">Indústria</span>
+              <strong>Drebor Borrachas</strong>
+              <span class="logo-meta">+18 plantas protegidas</span>
+            </article>
+            <article class="logo-item" data-accent="lime" aria-hidden="true">
+              <img class="logo-mark" src="/assets/logos/mixnutri.png" alt="Logo Mix Nutri" loading="lazy" />
+              <span class="logo-chip">Alimentos</span>
+              <strong>Mix Nutri</strong>
+              <span class="logo-meta">SOC dedicado Imagetech</span>
+            </article>
+            <article class="logo-item" data-accent="royal" aria-hidden="true">
+              <img class="logo-mark" src="/assets/logos/multicoisas.png" alt="Logo Multicoisas" loading="lazy" />
+              <span class="logo-chip">Varejo</span>
+              <strong>Multicoisas</strong>
+              <span class="logo-meta">Cobertura multi-lojas</span>
+            </article>
+            <article class="logo-item" data-accent="gold" aria-hidden="true">
+              <img class="logo-mark" src="/assets/logos/cfa.png" alt="Logo Conselho Federal de Administração" loading="lazy" />
+              <span class="logo-chip">Conselho Federal</span>
+              <strong>CFA</strong>
+              <span class="logo-meta">Governança + LGPD</span>
+            </article>
+          </div>
+          <div class="logo-row" data-direction="reverse">
+            <article class="logo-item" data-accent="lime">
+              <img class="logo-mark" src="/assets/logos/mixnutri.png" alt="Logo Mix Nutri" loading="lazy" />
+              <span class="logo-chip">Alimentos</span>
+              <strong>Mix Nutri</strong>
+              <span class="logo-meta">SOC dedicado Imagetech</span>
+            </article>
+            <article class="logo-item" data-accent="gold">
+              <img class="logo-mark" src="/assets/logos/cfa.png" alt="Logo Conselho Federal de Administração" loading="lazy" />
+              <span class="logo-chip">Conselho Federal</span>
+              <strong>CFA</strong>
+              <span class="logo-meta">Governança + LGPD</span>
+            </article>
+            <article class="logo-item" data-accent="sky">
+              <img class="logo-mark" src="/assets/logos/drebor.png" alt="Logo Drebor Borrachas" loading="lazy" />
+              <span class="logo-chip">Indústria</span>
+              <strong>Drebor Borrachas</strong>
+              <span class="logo-meta">+18 plantas protegidas</span>
+            </article>
+            <article class="logo-item" data-accent="royal">
+              <img class="logo-mark" src="/assets/logos/multicoisas.png" alt="Logo Multicoisas" loading="lazy" />
+              <span class="logo-chip">Varejo</span>
+              <strong>Multicoisas</strong>
+              <span class="logo-meta">Cobertura multi-lojas</span>
+            </article>
+            <article class="logo-item" data-accent="lime" aria-hidden="true">
+              <img class="logo-mark" src="/assets/logos/mixnutri.png" alt="Logo Mix Nutri" loading="lazy" />
+              <span class="logo-chip">Alimentos</span>
+              <strong>Mix Nutri</strong>
+              <span class="logo-meta">SOC dedicado Imagetech</span>
+            </article>
+            <article class="logo-item" data-accent="gold" aria-hidden="true">
+              <img class="logo-mark" src="/assets/logos/cfa.png" alt="Logo Conselho Federal de Administração" loading="lazy" />
+              <span class="logo-chip">Conselho Federal</span>
+              <strong>CFA</strong>
+              <span class="logo-meta">Governança + LGPD</span>
+            </article>
+            <article class="logo-item" data-accent="sky" aria-hidden="true">
+              <img class="logo-mark" src="/assets/logos/drebor.png" alt="Logo Drebor Borrachas" loading="lazy" />
+              <span class="logo-chip">Indústria</span>
+              <strong>Drebor Borrachas</strong>
+              <span class="logo-meta">+18 plantas protegidas</span>
+            </article>
+            <article class="logo-item" data-accent="royal" aria-hidden="true">
+              <img class="logo-mark" src="/assets/logos/multicoisas.png" alt="Logo Multicoisas" loading="lazy" />
+              <span class="logo-chip">Varejo</span>
+              <strong>Multicoisas</strong>
+              <span class="logo-meta">Cobertura multi-lojas</span>
+            </article>
+          </div>
         </div>
       </div>
     </section>
@@ -332,34 +366,9 @@
           <div class="logo">Kaspersky</div>
           <p>Proteção confiável para o presente e o futuro digital.</p>
         </div>
-        <div>
-          <h4>Links</h4>
-          <ul>
-            <li><a href="#hero">Início</a></li>
-            <li><a href="#solutions">Soluções</a></li>
-            <li><a href="#alliance">Parceria</a></li>
-            <li><a href="#contact">Contato</a></li>
-          </ul>
-        </div>
-        <div>
-          <h4>Legal</h4>
-          <ul>
-            <li><a href="#">Política de Privacidade</a></li>
-            <li><a href="#">Termos de Uso</a></li>
-            <li><a href="#">LGPD</a></li>
-          </ul>
-        </div>
-        <div>
-          <h4>Redes</h4>
-          <div class="social">
-            <a href="#" aria-label="LinkedIn">in</a>
-            <a href="#" aria-label="Twitter">tw</a>
-            <a href="#" aria-label="YouTube">yt</a>
-          </div>
-        </div>
       </div>
       <div class="partner-footer" data-delay="0.1">
-        <img src="LOGO_escritabranca.png" alt="Grupo Imagetech" />
+        <img src="/assets/images/LOGO_escritabranca.png" alt="Grupo Imagetech" />
         <p>
           O Grupo Imagetech é referência em tecnologia, infraestrutura e soluções corporativas. Com atuação nacional e squads especializados, conduz arquitetura, implantação e sustentação de plataformas críticas em parceria com a Kaspersky.
         </p>
